--- a/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
+++ b/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "c0248c96",
    "metadata": {},
    "outputs": [
@@ -81,18 +81,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 7, 4, 5, 3, 6, 2]\n"
+      "[5, 6, 4, 7, 3, 1]\n"
      ]
     }
    ],
    "source": [
     "def ordre_machines2(k):\n",
-    "    res= np.argsort(ordre_machines[k-1])\n",
-    "    res=[x for x in res if x!=0]\n",
-    "    res = [int(x) for x in res]\n",
-    "    return res\n",
+    "    ligne = ordre_machines[k-1]                 # on prend la ligne k\n",
+    "    indices = np.argsort(ligne)                 # indices triés selon les valeurs\n",
+    "    indices = [int(i)+1 for i in indices if ligne[i] != 0]  # on garde seulement ceux dont la valeur != 0\n",
+    "    return indices\n",
     "\n",
-    "print(ordre_machines2(3))"
+    "print(ordre_machines2(3))\n"
    ]
   },
   {
