--- a/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
+++ b/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
@@ -112,9 +112,9 @@
     "\n",
     "# Fonction qui renvoie le nombre de vente du produit k\n",
     "def nb_vente(k):\n",
-    "    for i in range (len(indice_vente)):\n",
-    "        if indice_vente[i][0]==k:\n",
-    "            return indice_vente[i][1]\n",
+    "    for i in range (len(volume_ventes)):\n",
+    "        if volume_ventes[i][0]==k:\n",
+    "            return volume_ventes[i][1]\n",
     "\n",
     "# Fonction qui renvoie l'ordre des machines pour le produit k\n",
     "def ordre_machines(k):\n",
