--- a/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
+++ b/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
@@ -39,7 +39,7 @@
     "    [10, 10, 11,  9,  7,  9,  5, 11,  8,  0]\n",
     "])\n",
     "\n",
-    "# Matrice Y des ordres de fabrications pour les produits\n",
+    "# Matrice ordre_machines des ordres de fabrications pour les produits\n",
     "ordre_machines = np.array([\n",
     "    [2, 1, 6, 3, 7, 5, 4, 0],\n",
     "    [5, 3, 4, 1, 7, 2, 6, 0],\n",
@@ -119,7 +119,7 @@
     "# Fonction qui renvoie l'ordre des machines pour le produit k\n",
     "def ordre_machines(k):\n",
     "    res=[0]\n",
-    "    lignek=Y[k-1]\n",
+    "    lignek=ordre_machines[k-1]\n",
     "    i=1\n",
     "    while i<nb_empl:\n",
     "        for j in range (nb_mach):\n",
