--- a/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
+++ b/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,13 +51,7 @@
     "])\n",
     "\n",
     "# Pour avoir le nombre de vente de chaque produit\n",
-    "volume_ventes=np.array([[1,6982],\n",
-    "                       [2,2185],\n",
-    "                       [3,3209],\n",
-    "                       [4,2083],\n",
-    "                       [5,4286],\n",
-    "                       [6,5654],\n",
-    "                       [7,3925]])\n",
+    "nb_ventes=np.array([0,6982,2185,3209,2083,4286,5654,3925])\n",
     "\n",
     "\n",
     "\n",
@@ -69,30 +63,6 @@
    "metadata": {},
    "source": [
     "## Annexes pour le calcul du coût"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "c0248c96",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, 6, 4, 7, 3, 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def ordre_machines2(k):\n",
-    "    ligne = ordre_machines[k-1]                 # on prend la ligne k\n",
-    "    indices = np.argsort(ligne)                 # indices triés selon les valeurs\n",
-    "    indices = [int(i)+1 for i in indices if ligne[i] != 0]  # on garde seulement ceux dont la valeur != 0\n",
-    "    return indices\n",
-    "\n",
-    "print(ordre_machines2(3))\n"
    ]
   },
   {
@@ -118,16 +88,12 @@
     "\n",
     "# Fonction qui renvoie l'ordre des machines pour le produit k\n",
     "def ordre_machines(k):\n",
-    "    res=[0]\n",
-    "    lignek=ordre_machines[k-1]\n",
-    "    i=1\n",
-    "    while i<nb_empl:\n",
-    "        for j in range (nb_mach):\n",
-    "            if lignek[j]==i:\n",
-    "                res.append(j+1)\n",
-    "        i=i+1\n",
-    "    res.append(nb_empl-1)\n",
-    "    return res\n",
+    "    ligne = ordre_machines[k-1]                 # on prend la ligne k\n",
+    "    indices = np.argsort(ligne)                 # indices triés selon les valeurs\n",
+    "    indices = [int(i)+1 for i in indices if ligne[i] != 0]  # on garde seulement ceux dont la valeur != 0\n",
+    "    return indices\n",
+    "\n",
+    "print(ordre_machines2(3))\n",
     "\n",
     "def ordre_machines2(k):\n",
     "    res= np.argsort(ordre_machines[k-1])\n",
