--- a/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
+++ b/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
@@ -40,7 +40,7 @@
     "])\n",
     "\n",
     "# Matrice ordre_machines des ordres de fabrications pour les produits\n",
-    "ordre_machines = np.array([\n",
+    "ordre_mac = np.array([\n",
     "    [2, 1, 6, 3, 7, 5, 4, 0],\n",
     "    [5, 3, 4, 1, 7, 2, 6, 0],\n",
     "    [6, 0, 5, 3, 1, 2, 4, 0],\n",
@@ -82,7 +82,7 @@
     "\n",
     "# Fonction qui renvoie l'ordre des machines pour le produit k\n",
     "def ordre_machines(k):\n",
-    "    ligne = ordre_machines[k-1]                 # on prend la ligne k\n",
+    "    ligne = ordre_mac[k-1]                 # on prend la ligne k\n",
     "    indices = np.argsort(ligne)                 # indices triés selon les valeurs\n",
     "    indices = [int(i)+1 for i in indices if ligne[i] != 0]  # on garde seulement ceux dont la valeur != 0\n",
     "    return indices\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -144,16 +144,15 @@
    "source": [
     "\n",
     "start = time.time()\n",
-    "\n",
-    "inp_list = [k for k in range(1, nb_empl-1)]\n",
+    "inp_list = [k for k in range(1, nb_empl)]            #liste avec les numéros des machines dans l'ordre (faut il aller jusqu'à 8 pour intégrer la 8ème qu'on a mis à 0 ?\n",
     "permutations = list(itertools.permutations(inp_list))\n",
     "Donnes=[]\n",
     "cout=[]\n",
     "\n",
     "for k in range (len(permutations)):\n",
     "    permutations[k]=list(permutations[k])\n",
-    "    permutations[k].append(nb_empl-1)\n",
-    "    permutations[k].insert(0, 0)\n",
+    "    permutations[k].append(nb_empl)   # Ajouter la porte de sortie\n",
+    "    permutations[k].insert(0, 0)        # Ajouter la porte d'entrée \n",
     "    combi=construire_Combi(permutations[k])\n",
     "    Donnes.append([combi , cout_total(combi)])\n",
     "print(Donnes)\n",
