--- a/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
+++ b/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
@@ -51,7 +51,7 @@
     "])\n",
     "\n",
     "# Pour avoir le nombre de vente de chaque produit\n",
-    "nb_ventes=np.array([0,6982,2185,3209,2083,4286,5654,3925])\n",
+    "nb_vente=np.array([0,6982,2185,3209,2083,4286,5654,3925])\n",
     "\n",
     "\n",
     "\n",
@@ -106,8 +106,8 @@
     "            # Emplacements à parcourir correspondants\n",
     "            empl=mac_give_empl(ordre_m, Combinaison)\n",
     "            # Calcul du cout de ce chemin\n",
-    "            cout=cost_chemin(empl)\n",
-    "            cout_total=cout_total+(cout*nb_vente(produit))\n",
+    "            cout=temps_chemin(empl)\n",
+    "            cout_total=cout_total+(cout*nb_vente[produit])\n",
     "    return cout_total\n",
     "\n",
     "# Créér la liste de liste Combi à partir d'une liste de machines\n",
