--- a/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
+++ b/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
@@ -71,30 +71,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fonction qui renvoie l'ordre des machines pour le produit k\n",
+    "def ordre_machines(k):\n",
+    "    indices = np.argsort(ordre_mac[k-1])\n",
+    "    indices = [int(i)+1 for i in indices if ordre_mac[k-1][i] != 0]\n",
+    "    return indices\n",
+    "\n",
     "# Fonction qui renvoie le cout d'un chemin entier à partir d'une liste d'emplacements\n",
-    "def temps_chemin(L_E):\n",
-    "    n=len(L_E)\n",
+    "def temps_chemin(ordre_emplacements):\n",
     "    d=0\n",
-    "    for k in range (n-1):\n",
-    "        a, b=L_E[k], L_E[k+1]       \n",
+    "    for k in range (ordre_emplacements-1):\n",
+    "        a, b=ordre_emplacements[k], ordre_emplacements[k+1]       \n",
     "        d+=distances[a][b]   \n",
     "    return d\n",
     "\n",
-    "# Fonction qui renvoie l'ordre des machines pour le produit k\n",
-    "def ordre_machines(k):\n",
-    "    ligne = ordre_mac[k-1]                 # on prend la ligne k\n",
-    "    indices = np.argsort(ligne)                 # indices triés selon les valeurs\n",
-    "    indices = [int(i)+1 for i in indices if ligne[i] != 0]  # on garde seulement ceux dont la valeur != 0\n",
-    "    return indices\n",
     "\n",
     "# Fonction annexe qui renvoie la liste des emplacements à parcourir pour une liste de machines donnée\n",
-    "def mac_give_empl(l_mac, Combi):\n",
-    "    l_empl=[]\n",
-    "    for i in range (len(l_mac)):\n",
+    "def mac_give_empl(ordre_machines, Combi):\n",
+    "    ordre_emplacements=[]\n",
+    "    for i in range (len(ordre_machines)):\n",
     "        for j in range (len(Combi)):\n",
-    "            if l_mac[i]==Combi[j][1]:\n",
-    "                l_empl.append(Combi[j][0])\n",
-    "    return l_empl\n",
+    "            if ordre_machines[i]==Combi[j][1]:\n",
+    "                ordre_emplacements(Combi[j][0])\n",
+    "    return ordre_emplacements\n",
     "\n",
     "# Fonction annexe de calcul de cout à partir d'une combinaison Emplacement/Machines\n",
     "def cout_total(Combinaison):\n",
