--- a/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
+++ b/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
@@ -54,8 +54,7 @@
     "nb_vente=np.array([0,6982,2185,3209,2083,4286,5654,3925])\n",
     "\n",
     "\n",
-    "\n",
-    "L_P=[k for k in range (1,nb_prod+1)]\n"
+    "liste_produits=[k for k in range (1,nb_prod+1)]\n"
    ]
   },
   {
@@ -87,7 +86,7 @@
     "\n",
     "\n",
     "# Fonction annexe qui renvoie la liste des emplacements à parcourir pour une liste de machines donnée\n",
-    "def mac_give_empl(ordre_machines, Combi):\n",
+    "def Ordre_emplacements(ordre_machines, Combi):\n",
     "    ordre_emplacements=[]\n",
     "    for i in range (len(ordre_machines)):\n",
     "        for j in range (len(Combi)):\n",
@@ -98,12 +97,12 @@
     "# Fonction annexe de calcul de cout à partir d'une combinaison Emplacement/Machines\n",
     "def cout_total(Combinaison):\n",
     "    cout_total=0\n",
-    "    for produit in L_P:\n",
+    "    for produit in liste_produits:\n",
     "        if produit !=0:\n",
     "            # On récupère l'ordre des machines\n",
     "            ordre_m=ordre_machines(produit)\n",
     "            # Emplacements à parcourir correspondants\n",
-    "            empl=mac_give_empl(ordre_m, Combinaison)\n",
+    "            empl=Ordre_emplacements(ordre_m, Combinaison)\n",
     "            # Calcul du cout de ce chemin\n",
     "            cout=temps_chemin(empl)\n",
     "            cout_total=cout_total+(cout*nb_vente[produit])\n",
