--- a/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
+++ b/Méthode-brute-Calcul-de-la-solution-optimale.ipynb
@@ -9,7 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
+   "id": "46906c63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +54,12 @@
     "# Pour avoir le nombre de vente de chaque produit\n",
     "nb_vente=np.array([0,6982,2185,3209,2083,4286,5654,3925])\n",
     "\n",
-    "\n",
-    "liste_produits=[k for k in range (1,nb_prod+1)]\n"
+    "L_P=[k for k in range (1,nb_prod+1)]\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "c74e023a",
    "metadata": {},
    "source": [
     "## Annexes pour le calcul du coût"
@@ -66,43 +67,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
+   "id": "285695a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fonction qui renvoie l'ordre des machines pour le produit k\n",
-    "def ordre_machines(k):\n",
-    "    indices = np.argsort(ordre_mac[k-1])\n",
-    "    indices = [int(i)+1 for i in indices if ordre_mac[k-1][i] != 0]\n",
-    "    return indices\n",
-    "\n",
-    "# Fonction qui renvoie le cout d'un chemin entier à partir d'une liste d'emplacements\n",
-    "def temps_chemin(ordre_emplacements):\n",
+    "# Fonction qui renvoie le cout d'un chemin entier à partir d'une liste d'emplacements L_E\n",
+    "def temps_chemin(L_E):\n",
+    "    n=len(L_E)\n",
     "    d=0\n",
-    "    for k in range (ordre_emplacements-1):\n",
-    "        a, b=ordre_emplacements[k], ordre_emplacements[k+1]       \n",
+    "    for k in range (n-1):\n",
+    "        a, b=L_E[k], L_E[k+1]       \n",
     "        d+=distances[a][b]   \n",
     "    return d\n",
     "\n",
+    "# Fonction qui renvoie l'ordre des machines pour le produit k\n",
+    "def ordre_machines(k):\n",
+    "    ligne = ordre_mac[k-1]                 # on prend la ligne k\n",
+    "    indices = np.argsort(ligne)                 # indices triés selon les valeurs\n",
+    "    indices = [int(i)+1 for i in indices if ligne[i] != 0]  # on garde seulement ceux dont la valeur != 0\n",
+    "    return indices\n",
     "\n",
-    "# Fonction annexe qui renvoie la liste des emplacements à parcourir pour une liste de machines donnée\n",
-    "def Ordre_emplacements(ordre_machines, Combi):\n",
-    "    ordre_emplacements=[]\n",
-    "    for i in range (len(ordre_machines)):\n",
-    "        for j in range (len(Combi)):\n",
-    "            if ordre_machines[i]==Combi[j][1]:\n",
-    "                ordre_emplacements(Combi[j][0])\n",
-    "    return ordre_emplacements\n",
+    "# Fonction annexe qui renvoie la liste des emplacements l_empl à parcourir pour une liste de machines l_mac donnée par une combinaison Combi\n",
+    "def mac_give_empl(l_mac, Combi):\n",
+    "    l_empl=[]\n",
+    "    for i in range (len(l_mac)):\n",
+    "        j = 0\n",
+    "        while l_mac[i]!=Combi[j][1]:\n",
+    "            j+=1\n",
+    "        l_empl.append(Combi[j][0])\n",
+    "    return l_empl\n",
     "\n",
     "# Fonction annexe de calcul de cout à partir d'une combinaison Emplacement/Machines\n",
     "def cout_total(Combinaison):\n",
     "    cout_total=0\n",
-    "    for produit in liste_produits:\n",
+    "    for produit in L_P:\n",
     "        if produit !=0:\n",
     "            # On récupère l'ordre des machines\n",
     "            ordre_m=ordre_machines(produit)\n",
     "            # Emplacements à parcourir correspondants\n",
-    "            empl=Ordre_emplacements(ordre_m, Combinaison)\n",
+    "            empl=mac_give_empl(ordre_m, Combinaison)\n",
     "            # Calcul du cout de ce chemin\n",
     "            cout=temps_chemin(empl)\n",
     "            cout_total=cout_total+(cout*nb_vente[produit])\n",
@@ -110,11 +114,13 @@
     "\n",
     "# Créér la liste de liste Combi à partir d'une liste de machines\n",
     "def construire_Combi(Machines):\n",
-    "    return [[k, Machines[k]] for k in range (len(Machines))]\n"
+    "    return [[k, Machines[k]] for k in range (len(Machines))]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "a4f6d31f",
    "metadata": {},
    "source": [
     "## Calcul de la solution optimale"
@@ -122,45 +128,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "id": "a244f23c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-5ad3d7da40c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mpermutations\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mcombi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconstruire_Combi\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpermutations\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mDonnes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcombi\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mcout_total\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcombi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDonnes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDonnes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mitemgetter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-33eb7e2a170b>\u001b[0m in \u001b[0;36mcout_total\u001b[0;34m(Combinaison)\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mproduit\u001b[0m \u001b[0;34m!=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0;31m# On récupère l'ordre des machines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m             \u001b[0mordre_m\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mordre_machines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproduit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m             \u001b[0;31m# Emplacements à parcourir correspondants\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m             \u001b[0mempl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmac_give_empl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mordre_m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCombinaison\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-33eb7e2a170b>\u001b[0m in \u001b[0;36mordre_machines\u001b[0;34m(k)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0mnb_empl\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnb_mach\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mlignek\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m                 \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de permutations testées: 30960\n",
+      "La solution est : [[0, 0], [1, 7], [2, 3], [3, 2], [4, 1], [5, 8], [6, 4], [7, 6], [8, 5], [9, 9]] avec un coût de 1051574\n",
+      "Trouvée avec un temps de : 1.111670732498169 secondes\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "start = time.time()\n",
-    "inp_list = [k for k in range(1, nb_empl)]            #liste avec les numéros des machines dans l'ordre (faut il aller jusqu'à 8 pour intégrer la 8ème qu'on a mis à 0 ?\n",
+    "inp_list = [k for k in range(1, nb_empl+1)]            #liste avec les numéros des machines dans l'ordre (faut il aller jusqu'à 8 pour intégrer la 8ème qu'on a mis à 0 ?\n",
     "permutations = list(itertools.permutations(inp_list))\n",
     "Donnes=[]\n",
     "cout=[]\n",
     "\n",
-    "for k in range (len(permutations)):\n",
-    "    permutations[k]=list(permutations[k])\n",
-    "    permutations[k].append(nb_empl)   # Ajouter la porte de sortie\n",
-    "    permutations[k].insert(0, 0)        # Ajouter la porte d'entrée \n",
-    "    combi=construire_Combi(permutations[k])\n",
-    "    Donnes.append([combi , cout_total(combi)])\n",
-    "print(Donnes)\n",
+    "for permutation in permutations:\n",
+    "    permutation=list(permutation)\n",
+    "    permutation.append(nb_empl+1)   # Ajouter la porte de sortie\n",
+    "    permutation.insert(0, 0)        # Ajouter la porte d'entrée \n",
+    "    combi=construire_Combi(permutation)\n",
+    "    if not [3,1] in combi and not [4,2] in combi:\n",
+    "         Donnes.append([combi , cout_total(combi)])\n",
+    "print(\"Nombre de permutations testées: \"+ str(len(Donnes)))\n",
     "result=min(Donnes, key=itemgetter(1))\n",
     "     \n",
     "end=time.time()\n",
     "time=end-start\n",
     "\n",
-    "print('La solution est : '+str(result))\n",
-    "print('Avec un temps de :')"
+    "print(\"La solution est : \" + str(result[0]) + \" avec un coût de \" + str(int(result[1])))\n",
+    "print(\"Trouvée avec un temps de : \"+str(time)+ \" secondes\")"
    ]
   }
  ],
